--- a/public/css/header3.css
+++ b/public/css/header3.css
@@ -68,6 +68,63 @@
     width: 100%;
 
 }
+/* sale*/
+.hiden-conten{
+    display: none;
+    position: absolute;
+    z-index: 1;
 
+}
+.hiden:hover .hiden-conten{
+    display: block;
+}
+.priceq{
+    position: absolute;
+    top:161px;
+    color: red;
+    width: 100%;
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 25px;
+    text-align: center
+}
+.name-sp{
+    text-align: center;
+    margin-top: 10px;
+    font-family: Sans-Serif;
+    font-weight: bold;
+    margin-bottom: 50px;
+    color: black;
+}
 
+/*sale*/
 /*home*/
+
+/*footer*/
+/*footer-middle*/
+
+/*footer-middle*/
+.footer-middle1{
+    list-style: none;
+}
+
+
+
+
+/*footer-link*/
+.menu-footer-link{
+    padding: 0;
+    text-align: center;
+    margin: 0;
+
+}
+.menu-footer1{
+    display: inline-block;
+    margin-right: 50px;
+}
+.menu-footer2{
+    color:#f8fafc;
+    font-size: 20px;
+}
+/*footer-link*/
+/*footer*/
